--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -271,3 +271,17 @@ th.desc a {
     background: transparent url(../images/skin/database_save.png) 5px 50% no-repeat;
     padding-left: 28px;
 }
+ /*
+#headerBar{
+margin:0 auto;
+}
+body{
+    background:black;
+    display:block;
+    width:700px;
+}
+.mainBody{
+    background:white;
+    margin: 0 auto;
+}
+*/
